ocial media forrm

--- a/Week-2/Session4-Advanced HTML/restaurantReviews/greekhouse.html
+++ b/Week-2/Session4-Advanced HTML/restaurantReviews/greekhouse.html
@@ -64,10 +64,13 @@
             <main>
                 <h2>Greek House</h2>
                 <img src="https://media-cdn.tripadvisor.com/media/photo-s/0e/64/f4/50/from-the-outside-looking.jpg" alt="Greek House image." width="700" height="300"></img>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
+                <div>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                </div>
+
 
 
                 <h3>Overview</h3>
