css advanced and fixes

--- a/Week-2/Session4-Advanced HTML/socialmediaForm/index.html
+++ b/Week-2/Session4-Advanced HTML/socialmediaForm/index.html
@@ -3,20 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <style>
-        form {
-            display: table;
-        }
-        
-        label {
-            text-align: left;
-        }
-        
-        input {
-            display: flexbox;
-            position: relative;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 
     <title>Social Network</title>
 
