--- a/Week-2/Session4-Advanced HTML/favoriteMusician/index.html
+++ b/Week-2/Session4-Advanced HTML/favoriteMusician/index.html
@@ -3,12 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <style>
-        .field {
-            width: 350px;
-            height: auto;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 
     <title>Depeche Mode Fan Page</title>
 
